[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
